--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "mock-server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
@@ -15,6 +16,7 @@
     "firebase": "^10.12.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5"
   },
@@ -26,6 +28,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "json-server": "^1.0.0-beta.1",
     "sass": "^1.77.7",
     "vite": "^5.3.1"
   }
